--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -98,6 +98,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.3</version>
+				<configuration>
+					<to>
+						<image>dkvesic/${project.artifactId}:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
