--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -16,3 +16,19 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+
+build:
+  version: "v3"
+
+accounts:
+  message: "Message about Accounts"
+  contactDetails:
+    name: "John Doe"
+    email: "jdoe@gmail.com"
+  onCallSupport:
+    - (123) 456-7890
+    - (385) 987-4332
