--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9000
 spring:
   application:
-    name: cards
+    name: "cards"
   profiles:
     active: "prod"
   datasource:
@@ -20,3 +20,9 @@ spring:
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
