--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -69,6 +69,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.3</version>
+				<configuration>
+					<to>
+						<image>dkvesic/${project.artifactId}:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
