--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -6,18 +6,17 @@ spring:
   profiles:
     active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: admin
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: "jdbc:mysql://localhost:3307/accountsdb"
+    username: root
+    password: root
+    #    environment:
+    #      - MYSQL_ROOT_PASSWORD=root
+    #      - MYSQL_DATABASE=accountsdb
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
+  sql:
+    init:
+      mode: always
   config:
     import: "optional:configserver:http://localhost:8071/"
   rabbitmq:
