--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -60,10 +60,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>9.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -118,7 +119,7 @@
 				<version>3.4.3</version>
 				<configuration>
 					<to>
-						<image>dkvesic/${project.artifactId}:v1</image>
+						<image>dkvesic/${project.artifactId}:v2</image>
 					</to>
 				</configuration>
 			</plugin>
