--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,5 +1,35 @@
 services:
 
+  accountsdb:
+    container_name: accountsdb
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_DATABASE: accountsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: loansdb
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_DATABASE: loansdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  cardsdb:
+    container_name: cardsdb
+    ports:
+      - "3309:3306"
+    environment:
+      MYSQL_DATABASE: cardsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
   rabbit:
     image: rabbitmq:3.13-management
     hostname: rabbitmq
@@ -17,7 +47,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "dkvesic/configserver:v1"
+    image: "dkvesic/configserver:v2"
     container_name: "configserver_ms"
     ports:
       - "8071:8071"
@@ -35,7 +65,7 @@ services:
         condition: service_healthy
 
   accounts:
-    image: "dkvesic/accounts:v1"
+    image: "dkvesic/accounts:v2"
     container_name: "accounts_ms"
     extends:
       file: common-config.yml
@@ -44,12 +74,15 @@ services:
       - "8080:8080"
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     depends_on:
       configserver:
         condition: service_healthy
+      accountsdb:
+        condition: service_healthy
 
   loans:
-    image: "dkvesic/loans:v1"
+    image: "dkvesic/loans:v2"
     container_name: "loans_ms"
     ports:
       - "8090:8090"
@@ -58,12 +91,15 @@ services:
       service: microservice-configserver-config
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
     depends_on:
       configserver:
         condition: service_healthy
+      loansdb:
+        condition: service_healthy
 
   cards:
-    image: "dkvesic/cards:v1"
+    image: "dkvesic/cards:v2"
     container_name: "cards_ms"
     extends:
       file: common-config.yml
@@ -72,8 +108,11 @@ services:
       - "9000:9000"
     environment:
       SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
     depends_on:
       configserver:
+        condition: service_healthy
+      cardsdb:
         condition: service_healthy
 
 networks:
