--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -64,12 +64,34 @@ services:
       rabbit:
         condition: service_healthy
 
+  eurekaserver:
+    image: "dkvesic/eurekaserver:v2"
+    container_name: "eurekaserver_ms"
+    ports:
+      - "8070:8070"
+    extends:
+      file: common-config.yml
+      service: microservice-configserver-config
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
+    depends_on:
+      rabbit:
+        condition: service_healthy
+      configserver:
+        condition: service_healthy
+
   accounts:
     image: "dkvesic/accounts:v2"
     container_name: "accounts_ms"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
     ports:
       - "8080:8080"
     environment:
@@ -80,15 +102,17 @@ services:
         condition: service_healthy
       accountsdb:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
 
-  loans:
+  loans1:
     image: "dkvesic/loans:v2"
-    container_name: "loans_ms"
+    container_name: "loans_ms1"
     ports:
       - "8090:8090"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
     environment:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
@@ -97,13 +121,34 @@ services:
         condition: service_healthy
       loansdb:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
+
+  loans2:
+    image: "dkvesic/loans:v2"
+    container_name: "loans_ms2"
+    ports:
+      - "8091:8090"
+    extends:
+      file: common-config.yml
+      service: microservice-eureka-config
+    environment:
+      SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
+    depends_on:
+      configserver:
+        condition: service_healthy
+      loansdb:
+        condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
 
   cards:
     image: "dkvesic/cards:v2"
     container_name: "cards_ms"
     extends:
       file: common-config.yml
-      service: microservice-configserver-config
+      service: microservice-eureka-config
     ports:
       - "9000:9000"
     environment:
@@ -113,6 +158,8 @@ services:
       configserver:
         condition: service_healthy
       cardsdb:
+        condition: service_healthy
+      eurekaserver:
         condition: service_healthy
 
 networks:
