--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -30,3 +30,24 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      access: unrestricted
+    info:
+      env:
+        enabled: true
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "loans"
+    description: "Alpine Demo Loans App"
+    version: "1.0"
