--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -30,9 +30,17 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     shutdown:
       access: unrestricted
+    health:
+      probes:
+        enabled: true
     info:
       env:
         enabled: true
@@ -51,3 +59,9 @@ info:
     name: "accounts"
     description: "Alpine Demo Accounts App"
     version: "1.0"
+
+logging:
+  level:
+    com:
+      example:
+        accounts: DEBUG
