--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -30,11 +30,19 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     shutdown:
       access: unrestricted
     info:
       env:
+        enabled: true
+    health:
+      probes:
         enabled: true
 
 eureka:
@@ -51,3 +59,9 @@ info:
     name: "cards"
     description: "Alpine Demo Cards App"
     version: "1.0"
+
+logging:
+  level:
+    com:
+      example:
+        cards: DEBUG
