--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
     port: 5672
     user: "guest"
     pass: "guest"
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 
 management:
   endpoints:
