--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -12,12 +12,14 @@ spring:
       httpclient:
         connect-timeout: 1000
         response-timeout: 5s
-data:
-  redis:
-    connect-timeout: 2s
-    host: localhost
-    port: 6379
-    timeout: 1s
+  data:
+    redis:
+      connect-timeout: 2s
+      host: localhost
+      port: 6379
+      timeout: 1s
+  main:
+    allow-bean-definition-overriding: true
 
 management:
   health:
@@ -52,7 +54,7 @@ logging:
 resilience4j.circuitbreaker:
   configs:
     default:
-      slidingWindowSize: 50
+      slidingWindowSize: 10
       permittedNumberOfCallsInHalfOpenState: 2
       failureRateThreshold: 50
       waitDurationInOpenState: 10000
