--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -72,3 +72,5 @@ logging:
     com:
       example:
         loans: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
